# diabetes-predictors

./: Dockerfile  Final_Project_Data_Analysis.ipynb  Group-contributions.md  LICENSE  README.md  feature-engineering.ipynb  feature_engineering.ipynb  feature_engineering_notebook.ipynb  lasso_notebook.ipynb  plsr_notebook.ipynb  pyproject.toml
Code/: LASSO_Final_Model.py  PLSR_final_model.py  bio_feature_engineering.py  ses_feature_engineering.py
Data/raw/: raw_dataset.md
Notebooks/: LASSO_Data_Analysis.ipynb  data-preprocessing-notebook.ipynb  diabetedata-preprocessing-notebook (1).ipynb  diabetedata-preprocessing-notebook.ipynb  diabetes-health-indicators-data-preprocessing-notebook.ipynb  diabetes-health-indicators-dataset-notebook.ipynb  feature_engineering_notebook.ipynb  plsr_notebook.ipynb  plsr_notebook_old.ipynb
Tests/: LASSO_tests.py  feature-engineering-TESTS  plsr_tests  plsr_tests.py  test_feature_engineering.py
notebooks/: feature_engineering_notebook.ipynb  lasso_notebook.ipynb
notesbooks/: feature_engineering_notebook.ipynb
